Updated the design, circles around the avatar

--- a/src/render/partials/circles/numberToStringLocale.html
+++ b/src/render/partials/circles/numberToStringLocale.html
@@ -3,5 +3,5 @@ title: "Number.toLocaleString Shim"
 image: "images/projects/unknown.jpg"
 description: "A shim that augments Number.toLocaleString to accept locales as a parameter."
 url: "https://github.com/TheIronDeveloper/NumberToLocaleStringPatch"
-isProject: true
+isCirclePartial: true
 ---
