--- a/src/render/partials/circles/portfolio.html
+++ b/src/render/partials/circles/portfolio.html
@@ -3,5 +3,5 @@ title: "Portfolio"
 image: "images/projects/portfolio.jpg"
 description: "I made a mini-portfolio to highlight some of my past projects."
 url: "http://portfolio.theirondeveloper.com/"
-isProject: true
+isCirclePartial: true
 ---
