--- a/src/render/partials/circles/pokechecklist.html
+++ b/src/render/partials/circles/pokechecklist.html
@@ -3,5 +3,5 @@ title: "Pokemon Checklist"
 image: "images/projects/pokedex.jpg"
 description: "My first backbone.js project, this project served as a learning point that I also used to contribute to the Pokemon community."
 url: "http://www.pokechecklist.com/"
-isProject: true
+isCirclePartial: true
 ---
