--- a/src/render/partials/circles/wondertradeanalytics.html
+++ b/src/render/partials/circles/wondertradeanalytics.html
@@ -3,5 +3,5 @@ title: "WonderTradeAnalytics"
 image: "images/projects/theIronPokeBall.png"
 description: "Community driven pokemon experiment made in Node.js."
 url: "http://www.pokewondertrade.com/"
-isProject: true
+isCirclePartial: true
 ---
