--- a/src/render/partials/circles/numberToStringLocale.html
+++ b/src/render/partials/circles/numberToStringLocale.html
@@ -1,5 +1,5 @@
 ---
-title: "Number.toLocaleString Shim"
+title: "Number to LocaleString Shim"
 image: "images/projects/unknown.jpg"
 description: "A shim that augments Number.toLocaleString to accept locales as a parameter."
 url: "https://github.com/TheIronDeveloper/NumberToLocaleStringPatch"
