Portfolio page, and css updates

--- a/src/render/partials/circles/github.html
+++ b/src/render/partials/circles/github.html
@@ -2,6 +2,6 @@
 title: "Github"
 image: "images/contacts/github.jpg"
 description: "My Github Profile"
-url: "https://github.com/TheIronDeveloper/"
+href: "https://github.com/TheIronDeveloper/"
 isCirclePartial: true
 ---
