--- a/src/render/partials/circles/portfolio.html
+++ b/src/render/partials/circles/portfolio.html
@@ -2,6 +2,6 @@
 title: "Portfolio"
 image: "images/projects/portfolio.jpg"
 description: "I made a mini-portfolio to highlight some of my past projects."
-url: "http://portfolio.theirondeveloper.com/"
+href: "/portfolio"
 isCirclePartial: true
 ---
