--- a/src/render/partials/circles/wondertradeanalytics.html
+++ b/src/render/partials/circles/wondertradeanalytics.html
@@ -2,6 +2,6 @@
 title: "Wonder Trade Analytics"
 image: "images/projects/theIronPokeBall.png"
 description: "Community driven pokemon experiment made in Node.js."
-url: "http://www.pokewondertrade.com/"
+href: "http://www.WonderTradeAnalytics.com/"
 isCirclePartial: true
 ---
