--- a/src/render/partials/circles/numberToStringLocale.html
+++ b/src/render/partials/circles/numberToStringLocale.html
@@ -2,6 +2,6 @@
 title: "Number to LocaleString Shim"
 image: "images/projects/unknown.jpg"
 description: "A shim that augments Number.toLocaleString to accept locales as a parameter."
-url: "https://github.com/TheIronDeveloper/NumberToLocaleStringPatch"
+href: "https://github.com/TheIronDeveloper/NumberToLocaleStringPatch"
 isCirclePartial: true
 ---
