--- a/src/render/partials/circles/pokechecklist.html
+++ b/src/render/partials/circles/pokechecklist.html
@@ -2,6 +2,6 @@
 title: "Pokemon Checklist"
 image: "images/projects/pokedex.jpg"
 description: "My first backbone.js project, this project served as a learning point that I also used to contribute to the Pokemon community."
-url: "http://www.pokechecklist.com/"
+href: "http://www.pokechecklist.com/"
 isCirclePartial: true
 ---
