Starting on notes pages

--- a/src/render/partials/circles/linkedin.html
+++ b/src/render/partials/circles/linkedin.html
@@ -2,6 +2,6 @@
 title: "LinkedIn"
 image: "images/contacts/linkedin.jpg"
 description: "My LinkedIn Profile"
-href: "http://www.linkedin.com/"
+href: "http://www.linkedin.com/in/theirondeveloper/"
 isCirclePartial: true
 ---
