Fixing a minor bug with the background css

--- a/src/render/styles/style.css
+++ b/src/render/styles/style.css
@@ -16,14 +16,15 @@ body {
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     background: #000000; /* Old browsers */
-    background: -moz-linear-gradient(-45deg,  #000000 0%, #6393c1 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#000000), color-stop(100%,#6393c1)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(-45deg,  #000000 0%,#6393c1 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(-45deg,  #000000 0%,#6393c1 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(-45deg,  #000000 0%,#6393c1 100%); /* IE10+ */
-    background: linear-gradient(135deg,  #000000 0%,#6393c1 100%); /* W3C */
+    background: -moz-linear-gradient(-45deg,  #000000 0%, #6393c1 100%) fixed; /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#000000), color-stop(100%,#6393c1)) fixed; /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  #000000 0%,#6393c1 100%) fixed; /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  #000000 0%,#6393c1 100%) fixed; /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  #000000 0%,#6393c1 100%) fixed; /* IE10+ */
+    background: linear-gradient(135deg,  #000000 0%,#6393c1 100%) fixed; /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#6393c1',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
+
 
 /** Header **/
 
