--- a/src/render/partials/circles/numberToStringLocale.html
+++ b/src/render/partials/circles/numberToStringLocale.html
@@ -1,6 +1,6 @@
 ---
 title: "Number to LocaleString Shim"
-image: "images/projects/unknown.jpg"
+image: "images/projects/numberToLocale.jpg"
 description: "A shim that augments Number.toLocaleString to accept locales as a parameter."
 href: "https://github.com/TheIronDeveloper/NumberToLocaleStringPatch"
 isCirclePartial: true
