Closer to my wireframes

--- a/styles.less
+++ b/styles.less
@@ -1,3 +1,36 @@
+body,
+html {height:100%;margin: 0}
+
 body {
-  background: #efefef;
+}
+.app_wrapper{height: 100%}
+.app_element {display:flex; height: 100%}
+
+.container {
+  align-self: center;
+  margin: 0 auto;
+}
+
+.profile_Wrapper {
+  display: flex;
+  flex-flow: column;
+}
+.profile_imageWrapper {
+  width: 10rem;
+  height: 10rem;
+  background: #0b97c4;
+//  background: url('images/tystark.jpeg');
+  background-size: cover;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+.profile_itemWrapper {}
+.profile_item {
+  width: 3em;
+  height: 3em;
+  display: flex;
+  border: 1px solid #000;
+  border-radius: 50%;
+  
 }
