--- a/styles.less
+++ b/styles.less
@@ -3,7 +3,14 @@ html {height:100%;margin: 0}
 
 body {
 }
-.app_wrapper{height: 100%}
+.app_wrapper{
+  height: 100%;
+
+  background-image: url('./images/background.jpg');
+
+  font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+  color: #efefef;
+}
 .app_element {height: 100%}
 
 .navigation {position: absolute;display: flex;width: 100%;}
