--- a/styles.less
+++ b/styles.less
@@ -65,3 +65,22 @@ h2, h3 {margin: 0;}
   border-radius: 50%;
   
 }
+
+.portfolio_itemWrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  list-style: none;
+}
+
+.portfolio_item {
+  height: 4em;
+  width: 24%;
+
+  margin: 0 1% 1% 0;
+  padding: 0.5em;
+
+  border: 1px solid #efefef;
+  text-align: center;
+}
