Added background, and sorting portfolio by year

--- a/styles.less
+++ b/styles.less
@@ -73,7 +73,11 @@ h2, h3 {margin: 0;}
   padding: 0;
   list-style: none;
 }
-
+.portfolio_year {
+  width: 100%;
+  border-bottom: 1px solid #666;
+  margin-bottom: 0.5em;
+}
 .portfolio_item {
   height: 4em;
   width: 24%;
