--- a/styles.less
+++ b/styles.less
@@ -1,24 +1,30 @@
+
 @whiteBackground: rgba(255,255,255,0.5);
 
-.contentPage(@maxWidth, @backgound, @textColor) {
+@gradientEdge: #d4d7a3;
+
+.contentPage(@maxWidth) {
   padding: 1em;
   margin: 5em auto;
   width: 100%;
   max-width: @maxWidth;
-  background: @backgound;
-  color: @textColor;
 }
 
 * {;box-sizing: border-box;-moz-box-sizing: border-box}
 body,
 html {height:100%;margin: 0}
+html {
+  background: url('./images/background.jpg') no-repeat @gradientEdge;
+  background-size: cover;
+  min-height: 100%;
+}
 body {
 }
 h1, h2, h3 {text-align: center;}
+h1 {color: #fff}
 h2, h3 {margin: 0;}
 .app_wrapper{
   height: 100%;
-  background-image: url('./images/background.jpg');
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
   color: #efefef;
 }
@@ -36,14 +42,15 @@ h2, h3 {margin: 0;}
 }
 .container.Home {
   align-self: center;
-  .contentPage(500px, transparent, #fff);
+  .contentPage(500px);
 }
 .container.About {
   align-self: center;
-  .contentPage(500px, @whiteBackground, #333);
+  background: rgba(0,0,0,0.2);
+  .contentPage(500px);
 }
 .container.Portfolio {
-  .contentPage(800px, @whiteBackground, #333);
+  .contentPage(800px);
 }
 
 .profile_imageWrapper {
@@ -68,22 +75,25 @@ h2, h3 {margin: 0;}
 
 .portfolio_itemWrapper {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   padding: 0;
   list-style: none;
 }
 .portfolio_year {
   width: 100%;
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid #000;
+  padding: 0.5em;
   margin-bottom: 0.5em;
 }
 .portfolio_item {
   height: 4em;
-  width: 24%;
+  width: 32%;
 
-  margin: 0 1% 1% 0;
+  margin: 1% 0.5%;
   padding: 0.5em;
+
+  background: #fff;
+  color: #333;
 
   border: 1px solid #efefef;
   text-align: center;
