--- a/styles.less
+++ b/styles.less
@@ -150,7 +150,7 @@ h2, h3 {margin: 0;}
 .portfolio_item:hover,
 .portfolio_item:focus {
   .portfolio_item_description {
-    height: 100%;
+    height: auto;
     padding: 0.5em;
   }
 
