Adding a Link icon for my links

--- a/styles.less
+++ b/styles.less
@@ -205,8 +205,14 @@ h2, h3 {margin: 0;}
   border-radius: 1em;
 }
 .portfolio_item_link {
+  background: url('images/link.png') no-repeat center;
+  background-size: contain;
   display: block;
   padding: 1em;
+  text-indent: -9999px;
+}
+.portfolio_item_link:hover {
+  background-image: url('images/link_hover.png');
 }
 .portfolio_item_image {
   max-width: 100%;
