--- a/styles.less
+++ b/styles.less
@@ -34,9 +34,9 @@ h2, h3 {margin: 0;}
 }
 .app_element {height: 100%}
 
-.navigation {position: absolute;display: flex;width: 100%;}
-.navigation_list {margin: 0 auto; padding:0;display: flex}
-.navigation_item {list-style: none; margin: 3em 3em 0;cursor: pointer}
+.navigation {position: absolute;width: 100%;}
+.navigation_list {margin: 0 auto; padding:0;text-align: center}
+.navigation_item {list-style: none; margin: 3em 3em 0;cursor: pointer; display: inline-block}
 .navigation_item.active {text-decoration: underline;}
 
 .container_wrapper {display: flex;height: 100%}
@@ -235,6 +235,10 @@ h2, h3 {margin: 0;}
 }
 
 @media (max-width: 800px) {
+
+  .navigation_item {
+    margin: 2em 1em 0;
+  }
 
   .portfolio_item.portfolio_item {
     width: 100%;
