--- a/styles.less
+++ b/styles.less
@@ -39,7 +39,7 @@ h2, h3 {margin: 0;}
 .navigation_item {list-style: none; margin: 3em 3em 0;cursor: pointer; display: inline-block}
 .navigation_item.active {text-decoration: underline;}
 
-.container_wrapper {display: flex;height: 100%}
+.container_wrapper {display: flex;height: 100%;min-height: 400px}
 
 .container {
   transition: all .5s ease;
